re PR c++/15064 (typeid of template parameter gives ICE)

PR c++/15064
	* parser.c (cp_parser_postfix_expression): typeid operator cannot be
	used in integral constant expressions.

	PR c++/15064
	* g++.dg/template/crash18.C: New test.

From-SVN: r81090